// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [acorn] format 1`] = `
"'import' and 'export' may appear only with 'sourceType: module' (1:1)
> 1 | import "foo"
    | ^
Cause: 'import' and 'export' may appear only with 'sourceType: module' (1:0)"
`;

exports[`snippet: #0 [espree] format 1`] = `
"'import' and 'export' may appear only with 'sourceType: module' (1:1)
> 1 | import "foo"
    | ^
Cause: 'import' and 'export' may appear only with 'sourceType: module'"
`;

exports[`snippet: #0 [meriyah] format 1`] = `
"The import keyword can only be used with the module goal (1:12)
> 1 | import "foo"
    |            ^
Cause: [1:12]: The import keyword can only be used with the module goal"
`;

exports[`snippet: #1 [acorn] format 1`] = `
"'with' in strict mode (1:1)
> 1 | with(foo) {}
    | ^
Cause: 'with' in strict mode (1:0)"
`;

exports[`snippet: #1 [espree] format 1`] = `
"'with' in strict mode (1:1)
> 1 | with(foo) {}
    | ^
Cause: 'with' in strict mode"
`;

exports[`snippet: #1 [meriyah] format 1`] = `
"Strict mode code may not include a with statement (1:5)
> 1 | with(foo) {}
    |     ^
Cause: [1:5]: Strict mode code may not include a with statement"
`;

exports[`snippet: #2 [acorn] format 1`] = `
"Deleting local variable in strict mode (1:1)
> 1 | delete foo
    | ^
Cause: Deleting local variable in strict mode (1:0)"
`;

exports[`snippet: #2 [espree] format 1`] = `
"Deleting local variable in strict mode (1:1)
> 1 | delete foo
    | ^
Cause: Deleting local variable in strict mode"
`;

exports[`snippet: #2 [meriyah] format 1`] = `
"Calling delete on expression not allowed in strict mode (1:10)
> 1 | delete foo
    |          ^
Cause: [1:10]: Calling delete on expression not allowed in strict mode"
`;
